[workspace]
members = [
  "builds/impulse_proto",
  "deps/impulse_prost",
  "deps/impulse_rand",
  "deps/impulse_tokio",
  "deps/impulse_tonic",
  "impulse",
  "impulse_actuator",
  "impulse_interface",
  "libs/impulse_actuator_engine",
  "libs/impulse_actuator_internal",
  "libs/impulse_interface_external",
  "libs/impulse_interface_internal",
]

resolver = "2"
