[package]
name = "impulse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impulse_actuator = { path = "../impulse_actuator" }
impulse_interface = { path = "../impulse_interface" }

tokio = { version = "1.8.2", default-features = false, features = [ "macros", "rt-multi-thread" ] }
