[package]
name = "impulse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impulse_actuator = { path = "../impulse_actuator" }
impulse_interface = { path = "../impulse_interface" }

clap = { version = "2.33.3", default-features = false }
tokio = { path = "../impulse_dependency_tokio", package = "impulse_dependency_tokio", features = [ "macros", "rt-multi-thread" ] }
