[package]
name = "impulse_dependency_tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", default-features = false }

[features]
full = ["tokio/full"]
rt = ["tokio/rt"]
rt-multi-thread = ["tokio/rt-multi-thread"]
io-util = ["tokio/io-util"]
io-std = ["tokio/io-std"]
net = ["tokio/net"]
time = ["tokio/time"]
process = ["tokio/process"]
macros = ["tokio/macros"]
sync = ["tokio/sync"]
signal = ["tokio/signal"]
fs = ["tokio/fs"]
test-util = ["tokio/test-util"]
