[package]
name = "impulse_interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impulse_interface_grpc = { path = "../impulse_interface_grpc" }

tokio = { version = "1.8.2", default-features = false, features = [ "macros", "rt-multi-thread" ] }
