[package]
name = "impulse_interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impulse_interface_external = { path = "../libs/impulse_interface_external" }
impulse_interface_internal = { path = "../libs/impulse_interface_internal" }

tokio = { path = "../deps/impulse_tokio", package = "impulse_tokio", features = [ "macros", "rt-multi-thread", "signal" ] }
tonic = { path = "../deps/impulse_tonic", package = "impulse_tonic" }
