[package]
name = "impulse_interface_grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
tokio-stream = "0.1.7"

tokio = { path = "../impulse_dependency_tokio", package = "impulse_dependency_tokio", features = [ "sync" ] }

[build-dependencies]
impulse_build_proto = { path = "../impulse_build_proto" }

[dev-dependencies]
tokio = { path = "../impulse_dependency_tokio", package = "impulse_dependency_tokio", features = [ "macros", "rt-multi-thread" ] }
