[package]
name = "impulse_interface_grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.7"

prost = { path = "../deps/impulse_prost", package = "impulse_prost" }
tonic = { path = "../deps/impulse_tonic", package = "impulse_tonic" }
tokio = { path = "../deps/impulse_tokio", package = "impulse_tokio", features = [ "sync" ] }

[build-dependencies]
impulse_build_proto = { path = "../impulse_build_proto" }

[dev-dependencies]
tokio = { path = "../deps/impulse_tokio", package = "impulse_tokio", features = [ "macros", "rt-multi-thread" ] }
