[package]
name = "system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "impulse_actuator"

[[bin]]
name = "impulse_interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8.0"
rand = "0.8.4"
serde = { version = "1.0.127", default-features = false, features = [ "derive" ] }
serde_json = "1.0.66"
tokio = { version = "1.9.0", default-features = false, features = [ "fs", "rt-multi-thread", "process", "signal" ] }
tokio-stream = "0.1.7"
tonic = "0.5.0"
uuid = { version = "0.8.2", default-features = false, features = [ "std", "v4" ] }

[build-dependencies]
tonic-build = "0.5.1"
