[package]
name = "system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "impulse_actuator"

[[bin]]
name = "impulse_interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
rand = "0.8.4"
serde = { version = "1.0.132", default-features = false, features = [ "derive" ] }
serde_json = "1.0.73"
tokio = { version = "1.15.0", default-features = false, features = [ "fs", "rt-multi-thread", "process", "signal" ] }
tokio-stream = "0.1.8"
tonic = "0.6.2"
uuid = { version = "0.8.2", default-features = false, features = [ "std", "v4" ] }

[build-dependencies]
tonic-build = "0.6.2"
