[package]
name = "system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "impulse_actuator"

[[bin]]
name = "impulse_interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
rand = "0.8.5"
serde = { version = "1.0.163", default-features = false, features = [ "derive" ] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", default-features = false, features = [ "fs", "rt-multi-thread", "process", "signal" ] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
uuid = { version = "1.3.3", default-features = false, features = [ "std", "v4" ] }

[build-dependencies]
tonic-build = "0.9.2"
