[package]
name = "impulse_actuator_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { path = "../../deps/impulse_rand", package = "impulse_rand" }
tokio = { path = "../../deps/impulse_tokio", package = "impulse_tokio", features = [ "fs", "process" ] }

[dev-dependencies]
tokio = { path = "../../deps/impulse_tokio", package = "impulse_tokio", features = [ "macros", "rt-multi-thread" ] }
